--- a/src/frontend/public/index.html
+++ b/src/frontend/public/index.html
@@ -17,7 +17,9 @@
 </html>
 
 <style>
-    body{
-        margin: 0px;
+    body, html{
+        margin: 0;
+        padding: 0;
+        background-color: #252e41;
     }
 </style>
