Update Banpick page Ueumorphsim Design

--- a/src/frontend/public/index.html
+++ b/src/frontend/public/index.html
@@ -20,6 +20,6 @@
     body, html{
         margin: 0;
         padding: 0;
-        background-color: #252e41;
+        background-color: #9752ff;
     }
 </style>
